force-app/main/default/objects/MUSW__Application2__c/fields/abd_ABV_Alcohol_BY_Volume__c.field-meta.xml
<CustomField>
    <fullName>abd_ABV_Alcohol_BY_Volume__c</fullName>
    <label>ABV (Alcohol BY Volume)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>