force-app/main/default/objects/MUSW__Application2__c/fields/abd_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>abd_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>