force-app/main/default/objects/MUSW__Application2__c/fields/abd_Addl_Loc_City__c.field-meta.xml
<CustomField>
    <fullName>abd_Addl_Loc_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>