force-app/main/default/objects/MUSW__Application2__c/fields/abd_Addl_Loc_State__c.field-meta.xml
<CustomField>
    <fullName>abd_Addl_Loc_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>