force-app/main/default/objects/MUSW__Application2__c/fields/abd_Addl_Loc_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>abd_Addl_Loc_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>