force-app/main/default/objects/MUSW__Application2__c/fields/abd_Appeal_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Appeal_Date__c</fullName>
    <defaultValue>Today()+90</defaultValue>
    <label>Appeal Expire Date</label>
    <type>Date</type>
</CustomField>