force-app/main/default/objects/MUSW__Application2__c/fields/abd_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Application_Date__c</fullName>
    <inlineHelpText>Date application is submitted for the first time</inlineHelpText>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>