force-app/main/default/objects/MUSW__Application2__c/fields/abd_Attestation_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Attestation_Date__c</fullName>
    <label>Attestation Date</label>
    <type>Date</type>
</CustomField>