force-app/main/default/objects/MUSW__Application2__c/fields/abd_Attestation_Name__c.field-meta.xml
<CustomField>
    <fullName>abd_Attestation_Name__c</fullName>
    <label>Attestation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>