force-app/main/default/objects/MUSW__Application2__c/fields/abd_Available_as_temporary_license__c.field-meta.xml
<CustomField>
    <fullName>abd_Available_as_temporary_license__c</fullName>
    <formula>NOT(ISPICKVAL(abd_Application_Type__c,'New License')) &amp;&amp; abd_Primary_License__r.abd_LicenseType__r.abd_Available_as_temporary_license__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available as temporary license</label>
    <type>Checkbox</type>
</CustomField>