force-app/main/default/objects/MUSW__Application2__c/fields/abd_Bond_Company__c.field-meta.xml
<CustomField>
    <fullName>abd_Bond_Company__c</fullName>
    <inlineHelpText>Company providing bond</inlineHelpText>
    <label>Bond Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bond_Companies</valueSetName>
    </valueSet>
</CustomField>