force-app/main/default/objects/MUSW__Application2__c/fields/abd_Bond_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Bond_Effective_Date__c</fullName>
    <label>Bond Effective Date</label>
    <type>Date</type>
</CustomField>