force-app/main/default/objects/MUSW__Application2__c/fields/abd_Bond_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_Bond_Number__c</fullName>
    <label>Bond Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>