force-app/main/default/objects/MUSW__Application2__c/fields/abd_Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_Booth_Number__c</fullName>
    <label>Booth Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>