force-app/main/default/objects/MUSW__Application2__c/fields/abd_Business_Entity_Type_f__c.field-meta.xml
<CustomField>
    <fullName>abd_Business_Entity_Type_f__c</fullName>
    <formula>TEXT(MUSW__Account__r.Business_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Entity Type</label>
    <type>Text</type>
</CustomField>