force-app/main/default/objects/MUSW__Application2__c/fields/abd_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>abd_Business_Name__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>