force-app/main/default/objects/MUSW__Application2__c/fields/abd_Business_Operations__c.field-meta.xml
<CustomField>
    <fullName>abd_Business_Operations__c</fullName>
    <label>Business Operations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>