force-app/main/default/objects/MUSW__Application2__c/fields/abd_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Business_Type__c</fullName>
    <label>Business Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreign corporation as defined in section 504.141</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Non-Profit Association</fullName>
            </value>
            <value>
                <fullName>Nonprofit corporation organized under chapter 504</fullName>
            </value>
            <value>
                <fullName>Nonprofit entity which has a principal office in the State of Iowa</fullName>
            </value>
            <value>
                <fullName>Privately Held Corporation</fullName>
            </value>
            <value>
                <fullName>Publicly Traded Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Municipality General Partnership</fullName>
                <isActive>false</isActive>
                <label>Municipality General Partnership</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>