force-app/main/default/objects/MUSW__Application2__c/fields/abd_Calendar_Days__c.field-meta.xml
<CustomField>
    <fullName>abd_Calendar_Days__c</fullName>
    <formula>( abd_Effective_End_Date__c - abd_Effective_Date__c ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>