force-app/main/default/objects/MUSW__Application2__c/fields/abd_Charity_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Charity_Business_Type__c</fullName>
    <label>Charity Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreign corporation as defined in section 504.141</fullName>
            </value>
            <value>
                <fullName>Nonprofit corporation organized under chapter 504</fullName>
            </value>
            <value>
                <fullName>Nonprofit entity which has a principal office in the State of Iowa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>