force-app/main/default/objects/MUSW__Application2__c/fields/abd_COLA_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_COLA_Number__c</fullName>
    <label>COLA Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>