force-app/main/default/objects/MUSW__Application2__c/fields/abd_Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>abd_Compliance_Review__c</fullName>
    <label>Compliance Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>