force-app/main/default/objects/MUSW__Application2__c/fields/ABD_Continuous_Until_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>ABD_Continuous_Until_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuous Until Cancelled</label>
    <type>Checkbox</type>
</CustomField>