force-app/main/default/objects/MUSW__Application2__c/fields/abd_Corporate_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_Corporate_ID_Number__c</fullName>
    <label>Corporate ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>