force-app/main/default/objects/MUSW__Application2__c/fields/abd_Date_Denied_by_LA__c.field-meta.xml
<CustomField>
    <fullName>abd_Date_Denied_by_LA__c</fullName>
    <label>Date Denied by LA</label>
    <type>Date</type>
</CustomField>