force-app/main/default/objects/MUSW__Application2__c/fields/abd_Date_of_Auction_Ending__c.field-meta.xml
<CustomField>
    <fullName>abd_Date_of_Auction_Ending__c</fullName>
    <label>Date of Auction - Ending</label>
    <type>Date</type>
</CustomField>