force-app/main/default/objects/MUSW__Application2__c/fields/abd_Days_in_Year__c.field-meta.xml
<CustomField>
    <fullName>abd_Days_in_Year__c</fullName>
    <formula>IF( 
abd_Is_End_Date_Leap_Year__c &amp;&amp;
abd_Effective_End_Date__c >= DATE(year(abd_Effective_End_Date__c),2,29),
366, 
365
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>