force-app/main/default/objects/MUSW__Application2__c/fields/abd_DBA__c.field-meta.xml
<CustomField>
    <fullName>abd_DBA__c</fullName>
    <inlineHelpText>Business name</inlineHelpText>
    <label>Doing Business As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>