force-app/main/default/objects/MUSW__Application2__c/fields/abd_Display_Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>abd_Display_Premise_Address__c</fullName>
    <formula>IF(  abd_Use_Mailing__c , MUSW__Account__r.BillingStreet, abd_Premise_Address__c&amp;IF(ISBLANK(abd_Premise_Address_2__c),"",BR()&amp;abd_Premise_Address_2__c) )</formula>
    <label>Premises Address</label>
    <type>Text</type>
</CustomField>