force-app/main/default/objects/MUSW__Application2__c/fields/abd_Display_Premise_City__c.field-meta.xml
<CustomField>
    <fullName>abd_Display_Premise_City__c</fullName>
    <formula>IF( abd_Use_Mailing__c ,  MUSW__Account__r.BillingCity ,  abd_Premise_City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premises City</label>
    <type>Text</type>
</CustomField>