force-app/main/default/objects/MUSW__Application2__c/fields/abd_Display_Premise_State__c.field-meta.xml
<CustomField>
    <fullName>abd_Display_Premise_State__c</fullName>
    <formula>IF( abd_Use_Mailing__c ,  MUSW__Account__r.BillingState ,  text(abd_Premise_State__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premises State</label>
    <type>Text</type>
</CustomField>