force-app/main/default/objects/MUSW__Application2__c/fields/abd_Display_Premise_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>abd_Display_Premise_Zip_Code__c</fullName>
    <formula>IF( abd_Use_Mailing__c ,  MUSW__Account__r.BillingPostalCode ,   abd_Premise_Zip_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premises Zip Code</label>
    <type>Text</type>
</CustomField>