force-app/main/default/objects/MUSW__Application2__c/fields/abd_Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_Docket_Number__c</fullName>
    <inlineHelpText>If licensee fails review</inlineHelpText>
    <label>Docket Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>