force-app/main/default/objects/MUSW__Application2__c/fields/abd_DRAM_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_DRAM_Policy_Expiration_Date__c</fullName>
    <label>Policy Expiration Date</label>
    <type>Date</type>
</CustomField>