force-app/main/default/objects/MUSW__Application2__c/fields/abd_DRAM_shop__c.field-meta.xml
<CustomField>
    <fullName>abd_DRAM_shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Carrier providing insurance</inlineHelpText>
    <label>Dramshop Liability Insurance Carrier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>DRAM Shop</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (DRAM shop)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>