force-app/main/default/objects/MUSW__Application2__c/fields/abd_DRAM_Shop_Email__c.field-meta.xml
<CustomField>
    <fullName>abd_DRAM_Shop_Email__c</fullName>
    <label>DRAM Shop Email</label>
    <type>Email</type>
</CustomField>