force-app/main/default/objects/MUSW__Application2__c/fields/abd_Dues_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_Dues_Member_Number__c</fullName>
    <label>Dues Member Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>