force-app/main/default/objects/MUSW__Application2__c/fields/abd_Effective_Date_of_Current_License__c.field-meta.xml
<CustomField>
    <fullName>abd_Effective_Date_of_Current_License__c</fullName>
    <label>Start Date of Current License</label>
    <type>Date</type>
</CustomField>