force-app/main/default/objects/MUSW__Application2__c/fields/abd_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Effective_End_Date__c</fullName>
    <inlineHelpText>Last day the policy is effective</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>