force-app/main/default/objects/MUSW__Application2__c/fields/abd_Effective_End_Date_of_Current_Lic__c.field-meta.xml
<CustomField>
    <fullName>abd_Effective_End_Date_of_Current_Lic__c</fullName>
    <label>Expiration Date of Current License</label>
    <type>Date</type>
</CustomField>