force-app/main/default/objects/MUSW__Application2__c/fields/abd_Is_End_Date_Leap_Year__c.field-meta.xml
<CustomField>
    <fullName>abd_Is_End_Date_Leap_Year__c</fullName>
    <description>Field is true if effective end date is in a leap year</description>
    <formula>OR( 
  MOD( YEAR(  abd_Effective_End_Date__c  ), 400 ) = 0, 
  AND( 
   MOD( YEAR(  abd_Effective_End_Date__c  ), 4 ) = 0,
    MOD( YEAR(  abd_Effective_End_Date__c  ), 100 ) != 0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is End Date Leap Year</label>
    <type>Checkbox</type>
</CustomField>