force-app/main/default/objects/MUSW__Application2__c/fields/abd_Length__c.field-meta.xml
<CustomField>
    <fullName>abd_Length__c</fullName>
    <inlineHelpText>License Duration, 8 month, 12 month, etc.</inlineHelpText>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>