force-app/main/default/objects/MUSW__Application2__c/fields/abd_Local_Authority_Email__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority_Email__c</fullName>
    <label>Local Authority Email</label>
    <type>Email</type>
</CustomField>