force-app/main/default/objects/MUSW__Application2__c/fields/abd_Local_Authority_is_State__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority_is_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Authority is State</label>
    <type>Checkbox</type>
</CustomField>