force-app/main/default/objects/MUSW__Application2__c/fields/abd_Local_Authority_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority_Type__c</fullName>
    <label>Local Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
                <default>true</default>
                <label>City</label>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>