force-app/main/default/objects/MUSW__Application2__c/fields/abd_More_Than_250_Members__c.field-meta.xml
<CustomField>
    <fullName>abd_More_Than_250_Members__c</fullName>
    <label>More Than 250 Members</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>