force-app/main/default/objects/MUSW__Application2__c/fields/abd_Next_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>abd_Next_Review_Status__c</fullName>
    <label>Next Review Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>