force-app/main/default/objects/MUSW__Application2__c/fields/abd_Non_profit__c.field-meta.xml
<CustomField>
    <fullName>abd_Non_profit__c</fullName>
    <label>Non-profit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>