force-app/main/default/objects/MUSW__Application2__c/fields/abd_Number_for_Communication__c.field-meta.xml
<CustomField>
    <fullName>abd_Number_for_Communication__c</fullName>
    <formula>IF(
 ISPICKVAL(abd_Application_Type__c, "License Renewal"), abd_Primary_License__c ,  Name  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number for Communication</label>
    <type>Text</type>
</CustomField>