force-app/main/default/objects/MUSW__Application2__c/fields/abd_Number_of_Booklets__c.field-meta.xml
<CustomField>
    <fullName>abd_Number_of_Booklets__c</fullName>
    <label>Number of Booklets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>