force-app/main/default/objects/MUSW__Application2__c/fields/abd_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>abd_Occupancy__c</fullName>
    <label>Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>