force-app/main/default/objects/MUSW__Application2__c/fields/abd_Occupancy_Explination__c.field-meta.xml
<CustomField>
    <fullName>abd_Occupancy_Explination__c</fullName>
    <label>Occupancy Explination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>