force-app/main/default/objects/MUSW__Application2__c/fields/abd_Occupancy_Over_200__c.field-meta.xml
<CustomField>
    <fullName>abd_Occupancy_Over_200__c</fullName>
    <label>Occupancy Over 200</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Yes_No</valueSetName>
    </valueSet>
</CustomField>