force-app/main/default/objects/MUSW__Application2__c/fields/abd_Original_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Original_Issue_Date__c</fullName>
    <label>Original Issue Date</label>
    <type>Date</type>
</CustomField>