force-app/main/default/objects/MUSW__Application2__c/fields/abd_Other_Criteria__c.field-meta.xml
<CustomField>
    <fullName>abd_Other_Criteria__c</fullName>
    <label>Other Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club has more than 250 members</fullName>
            </value>
            <value>
                <fullName>Club has less than 250 members</fullName>
            </value>
            <value>
                <fullName>Veteran’s organization open one day per week or 52 days or less per year</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
            <value>
                <fullName>Sells Gas</fullName>
            </value>
            <value>
                <fullName>No Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>