force-app/main/default/objects/MUSW__Application2__c/fields/abd_Outdoor_Service_Area_Boundary_Info__c.field-meta.xml
<CustomField>
    <fullName>abd_Outdoor_Service_Area_Boundary_Info__c</fullName>
    <inlineHelpText>Explain how the boundaries of the Outdoor Service Area are designated (fence, barricades, etc.)</inlineHelpText>
    <label>Outdoor Service Area Boundary Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>