force-app/main/default/objects/MUSW__Application2__c/fields/abd_Outdoor_Service_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>abd_Outdoor_Service_Endorsement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outdoor Service Endorsement</label>
    <type>Checkbox</type>
</CustomField>