force-app/main/default/objects/MUSW__Application2__c/fields/abd_Owner_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>abd_Owner_s_Signature__c</fullName>
    <label>Owner's Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>