force-app/main/default/objects/MUSW__Application2__c/fields/abd_Policy_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_Policy_Cancel_Date__c</fullName>
    <label>Policy Cancel Date</label>
    <type>Date</type>
</CustomField>