force-app/main/default/objects/MUSW__Application2__c/fields/abd_Portal_Processed__c.field-meta.xml
<CustomField>
    <fullName>abd_Portal_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Processed</label>
    <type>Checkbox</type>
</CustomField>