force-app/main/default/objects/MUSW__Application2__c/fields/abd_PortalWork_LicenseType__c.field-meta.xml
<CustomField>
    <fullName>abd_PortalWork_LicenseType__c</fullName>
    <description>Temporary field used by the Apex - Lightning transport interface for non-persisted objects</description>
    <label>PortalWork_LicenseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>