force-app/main/default/objects/MUSW__Application2__c/fields/abd_PortalWork_PsuedoApp__c.field-meta.xml
<CustomField>
    <fullName>abd_PortalWork_PsuedoApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a Psuedo App flag - Meaning that it's a read only version of an app generated from a license for display purposes only.</description>
    <label>PortalWork PsuedoApp</label>
    <type>Checkbox</type>
</CustomField>