force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_Address_2__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Address_2__c</fullName>
    <inlineHelpText>Further explanation of location to be licensed</inlineHelpText>
    <label>Premises Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>