force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Address__c</fullName>
    <inlineHelpText>Address of location to be licensed</inlineHelpText>
    <label>Premises Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>