force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_Change_Information__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Change_Information__c</fullName>
    <inlineHelpText>Explanation of how premises is being updated</inlineHelpText>
    <label>Premises Change Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>