force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_City_lu__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_City_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises City</label>
    <referenceTo>abd_Census__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>