force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_County__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_County__c</fullName>
    <label>Premises County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adair</fullName>
            </value>
            <value>
                <fullName>Adams</fullName>
            </value>
            <value>
                <fullName>Allamakee</fullName>
            </value>
            <value>
                <fullName>Appanoose</fullName>
            </value>
            <value>
                <fullName>Audubon</fullName>
            </value>
            <value>
                <fullName>Benton</fullName>
            </value>
            <value>
                <fullName>Black Hawk</fullName>
            </value>
            <value>
                <fullName>Boone</fullName>
            </value>
            <value>
                <fullName>Bremer</fullName>
            </value>
            <value>
                <fullName>Buchanan</fullName>
            </value>
            <value>
                <fullName>Buena Vista</fullName>
            </value>
            <value>
                <fullName>Butler</fullName>
            </value>
            <value>
                <fullName>Calhoun</fullName>
            </value>
            <value>
                <fullName>Carroll</fullName>
            </value>
            <value>
                <fullName>Cass</fullName>
            </value>
            <value>
                <fullName>Cedar</fullName>
            </value>
            <value>
                <fullName>Cerro Gordo</fullName>
            </value>
            <value>
                <fullName>Cherokee</fullName>
            </value>
            <value>
                <fullName>Chickasaw</fullName>
            </value>
            <value>
                <fullName>Clarke</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Clayton</fullName>
            </value>
            <value>
                <fullName>Clinton</fullName>
            </value>
            <value>
                <fullName>Crawford</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Davis</fullName>
            </value>
            <value>
                <fullName>Decatur</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Des Moines</fullName>
            </value>
            <value>
                <fullName>Dickinson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>