force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_County_lu__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_County_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises County</label>
    <referenceTo>abd_Census__c</referenceTo>
    <relationshipLabel>Applications (Premise County)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>