force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_From__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_From__c</fullName>
    <label>Premises Update Effective Date</label>
    <type>Date</type>
</CustomField>