force-app/main/default/objects/MUSW__Application2__c/fields/abd_Premise_To__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_To__c</fullName>
    <label>Premises Update Expiration Date</label>
    <type>Date</type>
</CustomField>